--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "2048",
   "version": "0.1.0",
-  "homepage": "https://github.com/Sdredinovich/2048REACT",
+  "homepage": "https://sdredinovich.github.io/2048REACT/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
